# FA2026_code

./: .gitignore  CONTEXT.md  README.md  SFISTA_in_torch_unsupervised.ipynb  environment-tf.yml  environment-torch.yml  environment.yml  pyproject.toml  requirements.txt
examples/: example_generator.py  example_tf.py  example_torch.py
src/fa2026/: __init__.py  generator.py  generator_tf.py  generator_torch.py  physical.py
src/fa2026/generators/: __init__.py  generator_tf.py  generator_torch.py
src/fa2026/optim/: __init__.py  callbacks.py  ista.py
tests/: test_generator.py
