[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fa2026"
version = "0.1.0"
description = "Data generators for CMF-based sparse source localisation (Forum Acusticum 2026)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "acoular",
    "ipykernel",
]

[project.optional-dependencies]
torch   = ["torch"]
tf      = ["tensorflow"]

[dependency-groups]
dev = ["pytest", "matplotlib"]

[tool.hatch.build.targets.wheel]
packages = ["src/fa2026"]

[tool.pytest.ini_options]
testpaths = ["tests"]
